<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="tell_us_about_your_day">Tell us about your day</string>
    <string name="hint">hint</string>
    <string name="how_anxious_are_you_feeling">How anxious are you feeling?</string>
    <string name="prompt_email" />
    <string name="prompt_password" />
    <string name="action_sign_in_short" />
    <string name="action_sign_in" />
    <string name="sign_in">Sign_in</string>
    <string name="button" tools:ignore="DuplicateDefinition">Button</string>
    <string name="welcome_to_the_hub_sytem">Welcome to the HUB system</string>
    <string name="email">email</string>

    <string name="welcom_to_the_hub_system">Welcom to the HUB system</string>
    <string name="tells_us_your_behave">Tells us your behave</string>
    <string name="would_you_like_to_see_a_profesional">Would you like to see a profesional?</string>
    <string name="submit">Submit</string>


</resources>